On some Intel CPUs with a P-state but not C-state invariant TSC the TSC may also halt in C2 and not just C3 (it seems that in some cases the BIOS advertises its C3 state as a C2 state in _CST).  Just play it safe and disable both C2 and C3 states if a user forces the use of the TSC as the timecounter on such CPUs.

PR:		192316
Differential Revision:	https://reviews.freebsd.org/D1441
No objection from:	jkim
MFC after:	1 week

Former-commit-id: 75d4cd70b5550036d86e5caceb05154abb7dcefb